--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">im studing informatics at up and this is my 2nd year</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">I am studing Bcom Informatics at UP and this is my 2nd year.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I hope to be an expect one day in programming.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
